fix per packageApp